Add language switching

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,10 @@
 
   <link href="https://felicitations.neocities.org/feed.txt" rel="alternate" type="application/rss+xml" title="ISAT Script RSS Feed!">
 
+  <script src="https://unpkg.com/i18next@23.12.2/dist/umd/i18next.min.js"></script>
+
   <script src="https://felicitations.neocities.org/bars.js" defer></script> 
+  <script src="./localization.js" defer></script>
 
 </head>
 
